# helm

./: AGENTS.md  CHARTER.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  VISION.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: commission.md  message-in-a-bottle.md
.github/workflows/: ci.yml
docs/adr/: 001-observe-steer-log.md  002-slate.md  003-full-fetch-on-observe.md  003-tiered-identity-resolution.md  004-sqlite-storage.md
src/: act.rs  bearing.rs  cli.rs  config.rs  identity.rs  main.rs  model.rs  observe.rs  steer.rs  storage.rs  tui.rs
src/cli/: actions.rs  format.rs  observe.rs  slate.rs  target.rs  voyage.rs
src/model/: action.rs  bearing.rs  mod.rs  observation.rs  observe.rs  payload.rs  position.rs  reading.rs  source.rs  steer.rs  voyage.rs
src/observe/: directory_tree.rs  file_contents.rs  files.rs  github.rs  rust_project.rs
src/storage/: logbook.rs  observation.rs  slate.rs  voyage.rs  working.rs
src/tui/: app.rs  mod.rs
src/tui/screens/: bearing.rs  home.rs  mod.rs  voyage.rs
