[package]
name = "helm"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
jiff = { version = "0.2.21", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.12"
uuid = { version = "1.21.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.19.1"
