[package]
name = "helm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
ignore = "0.4.23"
jiff = { version = "0.2.21", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.12"
toml = "1.0.3"
uuid = { version = "1.21.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.19.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic overrides.
module_name_repetitions = "allow" # Types are re-exported into flat namespaces; prefixed names are clearer.
