[package]
name = "helm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
hex = "0.4"
ignore = "0.4.23"
jiff = { version = "0.2.21", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
thiserror = "2.0.12"
toml = { version = "0.8", default-features = false, features = ["parse"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "3.19.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic overrides.
module_name_repetitions = "allow" # Types are re-exported into flat namespaces; prefixed names are clearer.
